sample/msvc/error/c2087.cpp
// C2087.cpp
int main() {
   char a[10][];   // C2087
}
